operator/pkg/gateway-api/testdata/gateway/tlsroute-invalid-reference-grant/output/cec-gateway-tlsroute-referencegrant.yaml
metadata:
  creationTimestamp: null
  annotations:
    cec.cilium.io/use-original-source-address: "false"
  labels:
    gateway.networking.k8s.io/gateway-name: gateway-tlsroute-referencegrant
  name: cilium-gateway-gateway-tlsroute-referencegrant
  namespace: gateway-conformance-infra
  ownerReferences:
    - apiVersion: gateway.networking.k8s.io/v1
      controller: true
      kind: Gateway
      name: gateway-tlsroute-referencegrant
      uid: ""
  resourceVersion: "1"
spec:
  resources:
    - "@type": type.googleapis.com/envoy.config.listener.v3.Listener
      filterChains:
      listenerFilters:
        - name: envoy.filters.listener.tls_inspector
          typedConfig:
            "@type": type.googleapis.com/envoy.extensions.filters.listener.tls_inspector.v3.TlsInspector
      name: listener
      socketOptions:
        - description: Enable TCP keep-alive (default to enabled)
          intValue: "1"
          level: "1"
          name: "9"
        - description: TCP keep-alive idle time (in seconds) (defaults to 10s)
          intValue: "10"
          level: "6"
          name: "4"
        - description: TCP keep-alive probe intervals (in seconds) (defaults to 5s)
          intValue: "5"
          level: "6"
          name: "5"
        - description: TCP keep-alive probe max failures.
          intValue: "10"
          level: "6"
          name: "6"
  services:
    - listener: ""
      name: cilium-gateway-gateway-tlsroute-referencegrant
      namespace: gateway-conformance-infra
      ports:
        - 443
