operator/pkg/gateway-api/testdata/gateway/tlsroute-invalid-reference-grant/output/gateway-tlsroute-referencegrant.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: gateway-tlsroute-referencegrant
  namespace: gateway-conformance-infra
spec:
  gatewayClassName: cilium
  listeners:
    - name: https
      port: 443
      protocol: TLS
      hostname: "*.example.com"
      allowedRoutes:
        namespaces:
          from: Same
        kinds:
          - kind: TLSRoute
      tls:
        mode: Passthrough
status:
  attachedListenerSets: 0
  conditions:
    - lastTransitionTime: "2025-07-01T14:29:32Z"
      message: Gateway successfully scheduled
      reason: Accepted
      status: "True"
      type: Accepted
    - lastTransitionTime: "2025-07-01T05:06:15Z"
      message: Gateway waiting for address
      reason: AddressNotAssigned
      status: "False"
      type: Programmed
  listeners:
    - attachedRoutes: 1
      conditions:
        - lastTransitionTime: "2025-07-01T14:29:32Z"
          message: Resolved Refs
          reason: ResolvedRefs
          status: "True"
          type: ResolvedRefs
        - lastTransitionTime: "2025-07-01T14:29:32Z"
          message: Listener Accepted
          reason: Accepted
          status: "True"
          type: Accepted
        - lastTransitionTime: "2025-07-01T14:29:32Z"
          message: Address not ready yet
          reason: Pending
          status: "False"
          type: Programmed
      name: https
      supportedKinds:
        - group: gateway.networking.k8s.io
          kind: TLSRoute
